<resources>
    <string-array name="car_brands">
        <item>Audi</item>
        <item>BMW</item>
        <item>Mercedes-Benz</item>
        <item>Toyota</item>
        <item>Honda</item>
        <item>Chevrolet</item>
        <item>Nissan</item>
        <item>Jeep</item>
        <item>Other</item>
        <!-- Add as many brands as you need -->
    </string-array>
    <string-array name="car_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Gold</item>
        <item>White</item>
        <item>Grey</item>
        <item>Silver</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Other</item>
        <!-- Add as many brands as you need -->
    </string-array>
    <string-array name="car_years">
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015 or less</item>
        <!-- Add as many brands as you need -->
    </string-array>
    <string name="app_name">Journey Together</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_registered">Already registered?</string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>
    <string name="not_reg_yet">Not registered yet?</string>
    <string name="signout">Signout</string>
    <string name="driver_name_placeholder">Driver Name</string>
    <string name="how_many_seats">How many seats?</string>
    <string name="share_your_phone_number">Share your phone number with driver?</string>
    <string name="pickup_address">Pickup address</string>
    <string name="additional_info">Additional info</string>
    <string name="additional_info_hint">Here you can specify anything else that the driver should know, such as accomodations or other special requests.</string>
    <string name="send_trip_request">Send request</string>
    <string name="start_send_trip_request">Send request</string>
    <string name="start_view_requests">View requests</string>
    <string name="accept_request">Accept</string>
    <string name="reject_request">Reject</string>
    <string name="btnPostText">+ Post</string>
    <string name="update">Update</string>
    <string name="driver_license">Driver License</string>

</resources>