<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/selectedTripDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/how_many_seats" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seekBarInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dsff" />

            <SeekBar
                android:id="@+id/seatsSeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <CheckBox
            android:id="@+id/sharePhoneNumberCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_your_phone_number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup_address" />

        <EditText
            android:id="@+id/pickupAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info" />

        <EditText
            android:id="@+id/additionalInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/additional_info_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"
            android:scrollHorizontally="false" />

        <Button
            android:id="@+id/sendRequestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_trip_request" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>